--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:      # Bisa dijalankan manual
   pull_request:           # Jalan otomatis saat ada PR ke main
     branches: [ main ]
-  push:                   # (Opsional) Jalan saat push ke main
+  push:                   # Jalan saat push ke main
     branches: [ main ]
 
 jobs:
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       - name: Grant Execute Permission for Gradlew
