--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -36,5 +36,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: api-test-report
-          path: build/reports/tests/test
+          path: build/reports
           retention-days: 7
